Añadido capítulo 3 sobre gestión de ramas al índice.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,23 +17,27 @@
         <div class="sm:pt-3 col-span-1 row-span-4 border-4 rounded-xl sm:row-span-8 lg:row-span-4 place-content-center">
             <div class="flex flex-col lg:gap-2 gap-3">
                 <div class="bg-purple-400 border-2 border-white place-content-center p-3 sm:h-1/3 shrink-0">
-                    <p class="font-semibold text-1/2xl text-center lg:text-2xl">Lorem ipsum dolor sit amet consectetur
-                        adipisicing
-                        elit. Aliquam consequuntur deserunt eligendi laboriosam excepturi, blanditiis ea dolorem iste
-                        facere sint debitis soluta, harum ut, quos iusto ipsum praesentium quo aliquid.</p>
+                    <p class="font-semibold text-1/2xl text-center lg:text-2xl">
+                        El Teatro Nacional es un ícono cultural con arquitectura neoclásica, situado en el corazón de la ciudad. 
+                        Sus majestuosos interiores, con frescos y dorados, albergan óperas, ballets y conciertos. Su imponente fachada 
+                        y escalinata reflejan la grandeza artística, siendo un punto de encuentro para amantes del arte y la cultura.
+                    </p>
                 </div>
                 <div class="bg-purple-400 border-2 border-white place-content-center p-3 sm:h-1/3 lg:hidden sm:hidden shrink-0">
-                    <p class="font-semibold text-1/2xl text-center lg:text-2xl">Lorem ipsum dolor, sit amet consectetur
-                        adipisicing
-                        elit. Quos est tempore ducimus! Error aspernatur aliquam deleniti! Eaque vitae excepturi
-                        quisquam incidunt, laborum consequatur eos quod provident assumenda culpa in fugit.</p>
+                    <p class="font-semibold text-1/2xl text-center lg:text-2xl">
+                        La iglesia, con su estructura gótica del siglo XIII, se eleva majestuosamente sobre la plaza central. Sus vidrieras multicolores narran historias 
+                        bíblicas, mientras que su 
+                        campanario, visible desde lejos, llama a los fieles a la oración. El aroma a incienso y el eco de los cantos gregorianos crean una atmósfera 
+                        de devoción y paz.
+                    </p>
                 </div>
                 <div class="bg-purple-400 border-2 border-white place-content-center p-3 sm:flex sm:h-1/3 lg:hidden shrink-0"
                     hidden>
-                    <p class="font-semibold text-1/2xl text-center lg:text-2xl">Lorem ipsum dolor, sit amet consectetur
-                        adipisicing
-                        elit. Quos est tempore ducimus! Error aspernatur aliquam deleniti! Eaque vitae excepturi
-                        quisquam incidunt, laborum consequatur eos quod provident assumenda culpa in fugit.</p>
+                    <p class="font-semibold text-1/2xl text-center lg:text-2xl">
+                        El Teatro Nacional, con su vibrante vida cultural y su arquitectura neoclásica, contrasta con la solemne antigüedad de la iglesia gótica. 
+                        Mientras el teatro es un centro de entretenimiento y cultura, la iglesia es un refugio de espiritualidad y tradición. Ambos edificios son testigos de la historia y 
+                        el alma de la ciudad, ofreciendo experiencias únicas y complementarias.
+                    </p>
                 </div>
             </div>
         </div>
